feat: initial release v0.1.0
- Standalone OSM power plant extraction package
- CLI with process and info commands
- Multi-level caching system
- Rejection tracking with GeoJSON export
- Integration with powerplantmatching
- Full documentation and examples

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -73,11 +73,11 @@ nav:
     - CLI Reference: user-guide/cli.md
     - Python API: user-guide/python-api.md
     - Data Output: user-guide/data-output.md
+    - Quality Tracking: user-guide/quality-tracking.md
     - Caching: user-guide/caching.md
   - Advanced:
     - Architecture: advanced/architecture.md
     - Processing Pipeline: advanced/pipeline.md
-    - Extending: advanced/extending.md
   - API Reference:
     - Interface: api/interface.md
     - Models: api/models.md
