--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,9 @@ Documentation = "https://open-energy-transition.github.io/osm-powerplants"
 [tool.hatch.build.targets.wheel]
 packages = ["src/osm_powerplants"]
 
+[tool.hatch.build.targets.wheel.force-include]
+"src/osm_powerplants/config.yaml" = "osm_powerplants/config.yaml"
+
 [tool.ruff]
 line-length = 88
 target-version = "py310"
@@ -74,3 +77,6 @@ testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_functions = ["test_*"]
 addopts = "-v --tb=short"
+markers = [
+    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+]
